<resources>
    <string name="app_name">Coffee Bean</string>
    <string name="home_title">coffee bean</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="code_label_text">Inserisci il tuo codice:</string>
    <string name="edit_text_hint">codice..</string>
    <string name="access_button_text">accedi</string>
    <string name="background_image_description">background image</string>
    <string name="coffee_title">Prodotti:</string>
    <string name="erogate_button_text">eroga</string>
    <string name="add_button_description">add button</string>
    <string name="remove_button_description">remove button</string>
    <string name="register_title">registrati</string>
    <string name="register_button">registrati</string>
    <string name="username_label_text">Username:</string>
    <string name="name_hint">nome</string>
    <string name="username_hint">username</string>
    <string name="name_label">Nome:</string>
    <string name="surmane_label_text">Cognome:</string>
    <string name="surname_hint">cognome</string>
    <string name="password_label">Password:</string>
    <string name="password_hint">password</string>
    <string name="success_welcome_text">Benvenuto</string>
    <string name="success_back_button_text">ordina ancora</string>

    <string name="success_field">registrazione effettuata come: %s</string>
    <string name="background_description">Background for cocktail image</string>
    <string name="cocktail_desc">cocktail image view</string>
    <string name="success_order">ordine effettuato!</string>
    <string name="order_completed_text">Grazie!\n Il tuo ordine è stato completato, potrai trovarlo nella tua sezione ordini!</string>
    <string name="order_item_quantity">Quantità: %d</string>
    <string name="menu_item">Tutti gli Ordini</string>
    <string name="mantra_item_text">Mantra</string>
    <string name="mantra_coding_label">Created by MantraCoding</string>
    <string name="mantra_coding">mantra coding logo</string>
    <string name="intro_text">Questa è Coffee Bean, la nostra applicazione dimostrativa per la creazione di database con Room</string>
    <string name="order_btn_text">Ordina</string>
    <string name="intro_image">intro image</string>
    <string name="free_list_image">no orders in the list</string>
</resources>
