<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerViewModel"
            type="com.example.coffeebean.register.RegisterCoffeeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register.RegisterFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="300dp"
                    android:layout_height="500dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/background_image_description"
                    app:srcCompat="@drawable/ic_home_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/register_title"
                    style="@style/titlesStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/register_title"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                    <TextView
                        android:id="@+id/name_label"
                        style="@style/labelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:text="@string/name_label" />

                    <EditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#c25e00"
                        android:ems="10"
                        android:hint="@string/name_hint"
                        android:inputType="textPersonName"
                        tools:targetApi="lollipop" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_title">

                    <TextView
                        android:id="@+id/valid_username_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{registerViewModel.usernameLabel}"
                        android:textColor="#c25e00"
                        tools:text="username placeholder" />

                    <TextView
                        android:id="@+id/username_label"
                        style="@style/labelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/username_label_text" />

                    <EditText
                        android:id="@+id/username_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#c25e00"
                        android:ems="10"
                        android:hint="@string/username_hint"
                        android:inputType="textPersonName"
                        tools:targetApi="lollipop" />
                </LinearLayout>

                <Button
                    android:id="@+id/register_button"
                    style="@style/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/register_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

                    <TextView
                        android:id="@+id/surname_label"
                        style="@style/labelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/surmane_label_text" />

                    <EditText
                        android:id="@+id/surname_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#c25e00"
                        android:ems="10"
                        android:hint="@string/surname_hint"
                        android:inputType="textPersonName"
                        tools:targetApi="lollipop" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/register_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

                    <TextView
                        android:id="@+id/valid_password_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{registerViewModel.passwordLabel}"
                        android:textColor="#c25e00"
                        tools:text="valid password placeholder" />

                    <TextView
                        android:id="@+id/password_label"
                        style="@style/labelStyle"
                        android:text="@string/password_label" />

                    <EditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#c25e00"
                        android:ems="10"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        tools:targetApi="lollipop" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>