<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.coffeebean.intro.IntroViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".intro.IntroFragment">


        <ImageView
            android:id="@+id/coffee_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/intro_image"
            app:layout_constraintBottom_toTopOf="@+id/intro_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_material_coffee" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/intro_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.796"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/intro_label"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/averia_sans_libre"
            android:gravity="center"
            android:text="@string/intro_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/make_order_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coffee_image" />

        <Button
            android:id="@+id/make_order_button"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/order_btn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intro_label" />

        <TextView
            android:id="@+id/user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/great_vibes"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:getIntroUser="@{user.user}"
            app:layout_constraintBottom_toBottomOf="@+id/coffee_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/coffee_image"
            app:layout_constraintVertical_bias="0.927"
            tools:text="Ciao Utente" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>